@@ -55,8 +55,10 @@ cg_var *cvec_find(cvec *vr, char *name);
 cg_var *cvec_find_var(cvec *vr, char *name);
 cg_var *cvec_find_keyword(cvec *vr, char *name);
 char   *cvec_find_str(cvec *vr, char *name);
-
+char   *cvec_name_get(cvec *vr);
+char   *cvec_name_set(cvec *vr, char *name);
 int     cv_exclude_keys(int status);
+
 
 #endif /* _CLIGEN_CVEC_H_ */
 
