@@ -46,6 +46,10 @@ written as: 123.4567. Ranges allowed for decimal64 as well.
 Autoheader support. clicon_config.h.in may be generated by autoheader,
 but is still part of the release.
 
+Cligen variable vectors (cvec) extended with 'name'. New functions:
+	char *cvec_name_get(cvec *vr);
+	char *cvec_name_set(cvec *vr, char *name);
+
 The string type is extended with a length keyword. This adds the
 possibility to limit the length of a string. Example: 
    <s:string length[2:10]>; # string length must bebetween 2 and 10
